# mirror-psrdada-code

./: .editorconfig  .gitignore  CMakeLists.txt  ChangeLog  bootstrap  configure.ac
Management/: CMakeLists.txt  psrdada.pc.in
apps/: CMakeLists.txt  Makefile.am  dada_db.c  dada_dbNdb.c  dada_dbcopydb.c  dada_dbdisk.c  dada_dbevent.c  dada_dbgpu.c  dada_dbib.c  dada_dbmeminfo.c  dada_dbmergedb.c  dada_dbmetric.c  dada_dbmonitor.c  dada_dbnic.c  dada_dbnull.c  dada_dbnum.c  dada_dboverflow.c  dada_dbrecover.c  dada_dbscrubber.c  dada_dbud.c  dada_dbwait.c  dada_dbxferinfo.c  dada_diskdb.c  dada_edit.c  dada_emptydb.c  dada_header.c  dada_ibdb.c  dada_install_header.c  dada_junkdb.c  dada_mem_test.c  dada_nicdb.c  dada_numdb.c  dada_pwc_command.c  dada_pwc_demo.c  dada_reader.c  dada_udgen.c  dada_udheader.c  dada_write_block_test.c  dada_write_test.c  dada_writer.c  (+8 more)
config/: cuda.m4  cudalt.py  hwloc.m4  librt.m4  rdmacm.m4
doc/: dada_pwc_main.tex
examples/src/: dada_example_client_writer.c  dada_example_writer.c
src/: CMakeLists.txt  Makefile.am  ascii_header.c  ascii_header.h  command_parse.c  command_parse.h  command_parse_server.c  command_parse_server.h  dada_affinity.c  dada_affinity.h  dada_client.c  dada_client.h  dada_cuda.cu  dada_cuda.h  dada_def.h  dada_generator.c  dada_generator.h  dada_hdu.c  dada_hdu.h  dada_ib.c  dada_ib.h  dada_ib_datagram.c  dada_ib_datagram.h  dada_msg.h  dada_ni.c  dada_ni.h  dada_pwc.c  dada_pwc.h  dada_pwc_main.c  dada_pwc_main.h  dada_pwc_main_multi.c  dada_pwc_main_multi.h  dada_pwc_nexus.c  dada_pwc_nexus.h  dada_pwc_nexus_config.c  dada_pwc_nexus_header_parse.c  dada_udp.c  dada_udp.h  daemon.c  daemon.h  (+39 more)
src/tests/: CMakeLists.txt  Makefile.am  test_ascii_header.c  test_command_parse_server.c  test_command_parser.c  test_dada_nexus.c  test_disk_array.c  test_ipcbuf.c  test_ipcio.c  test_ipcio_lifecycle.c  test_median_smooth_zap.c  test_multilog.c  test_multilog_server.c  test_uint64_t.c
